[package]
name = "ssd1307fd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics-core = "0.4.0"
framebuffer = "0.3.1"
stackvec = "0.2.1"

[dev-dependencies]
embedded-graphics = "0.8.0"
tinybmp = "0.5.0"