[package]
name = "ssd1307fb"
version = "0.1.0"
edition = "2021"
license="MIT"
description="Crate for using embedded-graphics with framebuffer provided by ssd1307fb driver"
readme="README.md"
authors=["Nikita Nazarenko <savant.d@gmail.com>"]
repository="https://github.com/savant2212/ssd1307fb-rs"
keywords=["oled", "ssd1306", "framebuffer"]
categories=["graphics", "embedded"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics-core = "0.4.0"
framebuffer = "0.3.1"

[dev-dependencies]
embedded-graphics = "0.8.0"
tinybmp = "0.5.0"